--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,15 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- checkout: none 
+- task: AzureMysqlDeployment@1
+  displayName: 'Execute Azure MySQL : InlineSqlTask'
+  inputs:
+    ConnectedServiceName: d1517a4b-9711-47d4-8c47-f042535711bb
+    ServerName: mjr104mysql.mysql.database.azure.com
+    DatabaseName: schema1
+    SqlUsername: mjr104mysql@mjr104mysql
+    SqlPassword: MR@kxC82K*7vbx*rFfevyJ562
+    TaskNameSelector: InlineSqlTask
+    SqlFile: SELECT * FROM schema1.table1
+    SqlInline: SELECT * FROM schema1.table1;
